Fix issue related to federal register card content overlapping card ribbon

--- a/src/scss/pages/_federal-register.scss
+++ b/src/scss/pages/_federal-register.scss
@@ -5,6 +5,10 @@
 .federal-register-item {
   @include card;
 
+  .card-text {
+    padding-top: 2 * $leading;
+  }
+
   a[href$=".pdf"]::after {
     content: '';
   }
